# keyframe-control-of-smoke-simulation

./: CMakeLists.txt  keyframe.boundary.cpp  keyframe.boundary.cu  keyframe.boundary.cuh  keyframe.boundary.h  keyframe.boundary.ixx  keyframe.collider.cpp  keyframe.collider.cu  keyframe.collider.h  keyframe.collider.ixx  keyframe.cpp  keyframe.field.cpp  keyframe.field.cu  keyframe.field.cuh  keyframe.field.h  keyframe.field.ixx  keyframe.geometry.cpp  keyframe.geometry.ixx  keyframe.h  keyframe.inspector.cpp  keyframe.inspector.cu  keyframe.inspector.h  keyframe.inspector.ixx  keyframe.ixx  keyframe.plugin.ixx  keyframe.project.cpp  keyframe.project.ixx  keyframe.solver.cpp  keyframe.solver.cu  keyframe.solver.h  keyframe.solver.ixx  main.cpp
.github/workflows/: archlinux.yml  windows.yml
core/: boundary.cpp  boundary.cu  boundary.cuh  boundary.h  boundary.ixx  collider.cpp  collider.cu  collider.h  collider.ixx  field.cpp  field.cu  field.cuh  field.h  field.ixx  geometry.ixx
operators/: advection.cpp  advection.cu  advection.h  advection.ixx  emitter.cpp  emitter.cu  emitter.h  emitter.ixx  keyframe.operators.advection.cpp  keyframe.operators.advection.cu  keyframe.operators.advection.h  keyframe.operators.advection.ixx  keyframe.operators.buoyancy.cpp  keyframe.operators.buoyancy.cu  keyframe.operators.buoyancy.h  keyframe.operators.buoyancy.ixx  keyframe.operators.emitter.cpp  keyframe.operators.emitter.cu  keyframe.operators.emitter.h  keyframe.operators.emitter.ixx  keyframe.operators.masked_scalar_assignment.cpp  keyframe.operators.masked_scalar_assignment.cu  keyframe.operators.masked_scalar_assignment.h  keyframe.operators.masked_scalar_assignment.ixx  keyframe.operators.projection.cpp  keyframe.operators.projection.cu  keyframe.operators.projection.h  keyframe.operators.projection.ixx  keyframe.operators.scalar_force.cpp  keyframe.operators.scalar_force.cu  keyframe.operators.scalar_force.h  keyframe.operators.scalar_force.ixx  keyframe.operators.solid.cpp  keyframe.operators.solid.cu  keyframe.operators.solid.h  keyframe.operators.solid.ixx  keyframe.operators.vorticity.cpp  keyframe.operators.vorticity.cu  keyframe.operators.vorticity.h  keyframe.operators.vorticity.ixx  (+8 more)
